2004/05/11 19:35 (+0200) kaffeetisch

	* GClosure.xs: Fix a debug message.

	* GValue.xs: Adjust the apidocs for gperl_sv_from_value to match
	the implementation.

	* gperl.h
	* Glib.xs: Implement and export new helper function
	gperl_format_variable_for_output.

	* GObject.xs: Use the new helper in gperl_get_object_check to
	output a stringified version of the variable.

2004/05/04 18:11 (-0400) muppetman

	* t/1.t, t/2.t, t/3.t, t/4.t, t/5.t, t/6.t, t/7.t, t/8.t, t/9.t,
	t/a.t, t/b.t, t/c.t, t/d.t: add some commentary to explain what's
	going on in each test.  there's a lot of duplicated testing, so we
	probably need to rework them at some point.

2004/04/21 12:36 (-0400) muppetman

	* GSignal.xs: remove invalid alias do_stuff_by_func().

2004/04/14 19:50 (+0200) kaffetisch

	Merge from the stable-1-04 branch:

	* NEWS: Update.

	* typemap, GBoxed.xs: use INT2PTR to hush warnings about improper
	casting on cygwin.

	* GError.xs: Mark unused variables.

	* Glib.xs: Use explicit casts in the version checking part of the
	BOOT code.

	* GenPod.pm: document the __hide__, __gerror__, and __function__
	modifiers for the apidoc directive.  Add $MAIN_MOD to the head of the
	see alsos list if it's set, so that the generated pages link to the
	correct extension.  Clean up the semantics of the copyright
	generation stuff, and make the docs a little clearer.

	* MakeHelper.pm: set $Glib::GenPod::MAIN_MOD with the module name in
	Glib::MakeHelper::postamble_docs_full, either from the depends object
	or the NAME key.

	* GenPod.pm
	* Glib.pm
	* MakeHelper.pm
	* ParseXSDoc.pm: Fix a spelling error here, adjust some grammar there.

	* t/8.t
	* GClosure.xs: don't clobber $_ when warning of unhandled exceptions.
	apparently the SAVE_DEFSV trick from a while back doesn't work.

	* Subclass.pm: beef up the docs.

2004/04/05 23:33 pcg

	* Glib.xs: gperl_sv_from_filename didn't check the return status
        of g_filename_to_utf8 properly, causing segfaults on invalid